Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2007-04-16 Tim
 PATCH: [ 1701151 ] Various Updates in German Translation
  Src/Languages/German: MergeGerman.rc

2007-04-14 Kimmo
 PATCH: [ 1700241 ] Add trailing slash for foldernames in Copy Confirm dialog
  Src: DirActions.cpp

2007-04-13 Kimmo
 PATCH: [ 1699585 ] Fix copy confirmation dialog for CopyTo
  Src: ConfirmFolderCopyDlg.cpp DirActions.cpp FileActionScript.h Merge.rc resource.h
  Src/Languages/*: Merge*.rc

2007-04-12 Kimmo
 BUG: [ 1698159 ] Invalid state change assertion
  Src: CompareStats.cpp CompareStats.h DiffThread.cpp DirCompProgressDlg.cpp
 PATCH: [ 1698641 ] Add 32x32 toolbar
  Src: MainFrm.cpp MainFrm.h Merge.rc OptionsDef.h OptionsInit.cpp resource.h
  Src/Languages/*: Merge*.rc
  Src/res new files: ToolbarDisabled32.bmp ToolbarEnabled32.bmp

2007-04-11 Kimmo
 Fix assert caused by my checkin 2007-04-08 Remove couple of useless wrapper functions
  Src: MergeDoc.cpp

2007-04-11 Gal
 PATCH: [ 1697691 ] Syntax highlighting scheme as resource strings
  Src/Languages/*: Merge*.rc
  Src: Merge.rc MergeEditView.cpp resource.h

2007-04-10 Kimmo
 PATCH: [ 1694048 ] File filter for Symbian developers
  Filters new file: Symbian.flt

2007-04-10 Gal
 BUG: [ 1694102 ] Compare with comments bug
  Src: stringdiffs.cpp

2007-04-08 Kimmo
 Add Jeremy Dewey and Dan Pidcock to contributors.txt
  Docs/Users: Contributors.txt
 Remove couple of useless wrapper functions
  Src: MergeDoc.cpp MergeDoc.h

2007-04-08 Takashi
 BUG: [ 1694581 ] Need to limit window tab width
  Src/Common: MDITabBar.cpp

2007-04-07 Kimmo
 Fix building language files (buildall.bat)
  : buildall.bat

2007-04-04 WinMerge experimental release 2.7.3.3 (SVN revision 4234)

2007-04-04 Kimmo
 Remove expat and SCEW unicode targets from build batch
  : buildall.bat
 BUG: [ 1576168 ] Cannot find file filter path message is wrong
  Src: FileFiltersDlg.cpp
  Src/Languages/*: Merge*.rc